--- a/joox-replica/src/styles/styles.scss
+++ b/joox-replica/src/styles/styles.scss
@@ -7,4 +7,6 @@
 body {
   background-color: $bodyBgColor;
   color: white;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
